[gd_scene load_steps=2 format=2]

[ext_resource path="res://Menus/OverworldHUDMenu.gd" type="Script" id=1]

[node name="HUDMenu" type="CanvasLayer"]
pause_mode = 2
script = ExtResource( 1 )

[node name="SaveGame" type="Button" parent="." groups=[
"HUDItems",
]]
margin_left = 3.0
margin_top = 3.0
margin_right = 52.0
margin_bottom = 23.0
text = "Salvar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackToMenu" type="Button" parent="." groups=[
"HUDItems",
]]
margin_left = 209.0
margin_top = 3.0
margin_right = 316.0
margin_bottom = 23.0
text = "Menu Principal"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="SaveGame" to="." method="_on_SaveGame_pressed"]
[connection signal="pressed" from="BackToMenu" to="." method="_on_BackToMenu_pressed"]
